--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -1,7 +1,15 @@
 - defaults:
-   link:
+    link:
       relink: true
+    shell:
+      stdout: true
+      stdin: true
+     
 
 - link:
    ~/.zshrc: zsh/zshrc
 
+- shell:
+  - [git submodule update --init --recursive, Installing submodules]
+  - [/bin/zsh ~/.zshrc, Installing zsh plugins]
+  - [sudo chsh -s /bin/zsh, Making zsh the default shell]
