--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = dotbot
 	url = https://github.com/anishathalye/dotbot
 	ignore = dirty
+[submodule "abduco"]
+	path = abduco
+	url = https://github.com/martanne/abduco.git
