Initial shell scripts to setup neovim

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -4,10 +4,31 @@
     shell:
       stdout: true
       stdin: true
-     
+
+- create:
+    - ~/.local/bin
+
+- shell:
+  - rm -rf neovim/binaries
+  - mkdir neovim/binaries
+  - [wget https://github.com/neovim/neovim/releases/download/v0.4.3/nvim.appimage,
+     Installing neovim binaries, update links as new releases come out]
+  - chmod u+x nvim.appimage
+  - mv nvim.appimage neovim/binaries/
+  - cd neovim/binaries && ./nvim.appimage --appimage-extract
+  - wget https://github.com/neovim/neovim/releases/download/v0.4.3/nvim-macos.tar.gz
+  - mv nvim-macos.tar.gz neovim/binaries/
+  - cd neovim/binaries && tar -xvzf nvim-macos.tar.gz
+
 - link:
    ~/.zshrc: zsh/zshrc
    ~/.p10k.zsh: zsh/p10k.zsh
+   ~/.local/bin/nvim:
+     if: '[ `uname` = Linux ]'
+     path: neovim/binaries/squashfs-root/AppRun
+   ~/.local/bin/nvim:
+     if: '[ `uname` = Darwin ]'
+     path: foo
 
 - shell:
   - [git submodule update --init --recursive, Installing submodules]
