--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -7,6 +7,7 @@
 
 - create:
     - ~/.local/bin
+    - ~/.config/nvim
 
 - shell:
   - rm -rf neovim/binaries
@@ -24,12 +25,7 @@
 - link:
    ~/.zshrc: zsh/zshrc
    ~/.p10k.zsh: zsh/p10k.zsh
-   ~/.local/bin/nvim:
-     if: '[ `uname` = Linux ]'
-     path: neovim/binaries/squashfs-root/AppRun
-   ~/.local/bin/nvim:
-     if: '[ `uname` = Darwin ]'
-     path: foo
+   ~/.config/nvim/init.vim: neovim/init.vim
 
 - shell:
   - [git submodule update --init --recursive, Installing submodules]
