--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -14,5 +14,8 @@
    ~/.config/nvim/init.vim: neovim/init.vim
 
 - shell:
+  - [command -v zsh, Checking dependencies were installed using host package manager]
+  - command -v pip3
+  - command -v curl
   - [/bin/zsh ~/.zshrc, Installing zsh plugins]
   - [nvim +PlugInstall +qall, Installing neovim plugins]
