Ensure local bins are added to path, use manual neovim install

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -17,6 +17,22 @@
   - [command -v zsh, Checking dependencies were installed using host package manager]
   - command -v pip3
   - command -v curl
+    # Neovim binaries
+  - rm -rf neovim/binaries
+  - mkdir neovim/binaries
+  - [wget https://github.com/neovim/neovim/releases/download/v0.4.3/nvim.appimage,
+     Installing neovim binaries, update links as new releases come out]
+  - chmod u+x nvim.appimage
+  - mv nvim.appimage neovim/binaries/
+  - cd neovim/binaries && ./nvim.appimage --appimage-extract
+  - wget https://github.com/neovim/neovim/releases/download/v0.4.3/nvim-macos.tar.gz
+  - mv nvim-macos.tar.gz neovim/binaries/
+  - cd neovim/binaries && tar -xvzf nvim-macos.tar.gz
+  - ./neovim/install_binaries.sh
+    # Neovim remote
   - [pip3 install --user neovim-remote, Install neovim-remote]
+    # Zsh
   - [/bin/zsh ~/.zshrc, Installing zsh plugins]
+    # Install vim plugins
   - [nvim +PlugInstall +qall, Installing neovim plugins]
+
