--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -9,10 +9,11 @@
     - ~/.config/nvim
 
 - link:
-   ~/.zshrc: zsh/zshrc
-   ~/.p10k.zsh: zsh/p10k.zsh
+   # ~/.zshrc: zsh/zshrc
+   # ~/.p10k.zsh: zsh/p10k.zsh
    ~/.config/nvim/init.vim: neovim/init.vim
    ~/.config/nvim/coc.vim: neovim/coc.vim
+   ~/.config/nvim/coc-settings.json.vim: neovim/coc-settings.json
 
 - shell:
   - [command -v zsh, Checking dependencies were installed using host package manager]
@@ -20,6 +21,7 @@
   - command -v curl
   - command -v node
   - command -v yarn
+  - command -v solargraph
     # Neovim binaries
   - rm -rf neovim/binaries
   - mkdir neovim/binaries
@@ -33,9 +35,11 @@
   - cd neovim/binaries && tar -xvzf nvim-macos.tar.gz
   - ./neovim/install_binaries.sh
     # Neovim remote
-  - [pip3 install --user neovim-remote, Install neovim-remote]
+  # - [pip3 install --user neovim-remote, Install neovim-remote]
     # Zsh
-  - [/bin/zsh ~/.zshrc, Installing zsh plugins]
+  # - [/bin/zsh ~/.zshrc, Installing zsh plugins]
     # Install vim plugins
+  # - [pip3 install --user neovim-remote, Install neovim-remote] Disable for now, this is complicated
+  # - [/bin/zsh ~/.zshrc, Installing zsh plugins] Disable for now
   - [nvim +PlugInstall +qall, Installing neovim plugins]
 
