--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -8,6 +8,11 @@
 - create:
     - ~/.config/nvim
 
+- shell:
+  - [mkdir saved || exit 1, "Move saved dir before rerunning"]
+  - [mv ~/.config/nvim/init.vim saved/init.vim, "Save previous vim config to previous_init.vim"]
+  - [mv ~/.local/share/nvim saved/, "Save previous plugins and plugins_plugins_nvim"]
+
 - link:
    # ~/.zshrc: zsh/zshrc
    # ~/.p10k.zsh: zsh/p10k.zsh
