--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "abduco"]
 	path = abduco
 	url = https://github.com/martanne/abduco.git
+[submodule "ruby/solargraph"]
+	path = ruby/solargraph
+	url = https://github.com/castwide/solargraph
