--- a/meta/configs/zsh.yaml
+++ b/meta/configs/zsh.yaml
@@ -1,2 +1,6 @@
+- link:
+   ~/.zshrc: zsh/zshrc
+   ~/.p10k.zsh: zsh/p10k.zsh
+
 - shell:
-    - echo 'hi from zsh base'
+  - [/bin/zsh ~/.zshrc, Installing zsh plugins]
