--- a/neovim/coc-settings.json
+++ b/neovim/coc-settings.json
@@ -1,4 +1,19 @@
 {
+  "languageserver": {
+    "ccls": {
+      "command": "ccls",
+      "filetypes": ["c", "cpp", "cc"],
+      "rootPatterns": [".ccls-root", "compile_commands.json"],
+      "initializationOptions": {
+        "cache": {
+          "directory": ".ccls-cache"
+        },
+        "client": {
+          "snippetSupport": true
+        }
+      }
+    }
+  },
   "coc.preferences.rootPatterns": [".solargraph.yml", ".git"],
   "solargraph.useBundler": false,
   "solargraph.completion": true,
