Got basic dockerfile for ccls working

--- a/c++/Dockerfile
+++ b/c++/Dockerfile
@@ -2,8 +2,14 @@ FROM ubuntu:18.04
 LABEL name=ape_ccls_container
 RUN apt update && apt install -y \
         git \
+        build-essential \
+        clang \
+        cmake \
         llvm-7 \
         clang-7 \
         libclang-7-dev
+RUN git clone --depth=1 --recursive https://github.com/MaskRay/ccls
+RUN cd ccls && \
+    cmake -H. -BRelease && \
+    cmake --build Release
 
-RUN git clone https://github.com/anuj1102/apenv.git
