--- a/meta/configs/neovim.yaml
+++ b/meta/configs/neovim.yaml
@@ -5,18 +5,18 @@
     - ~/.local
 
 - shell:
-  - rm -rf neovim/binaries
-  - mkdir -p neovim/binaries
-  - [wget https://github.com/neovim/neovim/releases/download/v0.4.3/nvim.appimage,
-     Installing neovim binaries, update links as new releases come out]
-  - chmod u+x nvim.appimage
-  - mv nvim.appimage neovim/binaries/
-  - cd neovim/binaries && ./nvim.appimage --appimage-extract
-  - wget https://github.com/neovim/neovim/releases/download/v0.4.3/nvim-macos.tar.gz
-  - mv nvim-macos.tar.gz neovim/binaries/
-  - cd neovim/binaries && tar -xvzf nvim-macos.tar.gz
-  - ./neovim/install_binaries.sh
-  - which nvim
+  # - rm -rf neovim/binaries
+  # - mkdir -p neovim/binaries
+  # - [wget https://github.com/neovim/neovim/releases/download/v0.4.3/nvim.appimage,
+  #    Installing neovim binaries, update links as new releases come out]
+  # - chmod u+x nvim.appimage
+  # - mv nvim.appimage neovim/binaries/
+  # - cd neovim/binaries && ./nvim.appimage --appimage-extract
+  # - wget https://github.com/neovim/neovim/releases/download/v0.4.3/nvim-macos.tar.gz
+  # - mv nvim-macos.tar.gz neovim/binaries/
+  # - cd neovim/binaries && tar -xvzf nvim-macos.tar.gz
+  # - ./neovim/install_binaries.sh
+  # - which nvim
   # - command: nvim +slient +VimEnter +PlugInstall +qall Can't get autoinstall wokring
   #   stdin: true
   #   stdout: true
@@ -27,3 +27,4 @@
    ~/.config/nvim/init.vim: neovim/init.vim
    ~/.config/nvim/coc.vim: neovim/coc.vim
    ~/.config/nvim/coc-settings.json: neovim/coc-settings.json
+   ~/.config/nvim/ccls: neovim/coc/ccls.vim
