--- a/neovim/coc-settings.json
+++ b/neovim/coc-settings.json
@@ -3,7 +3,7 @@
     "ccls": {
       "command": "ccls",
       "filetypes": ["c", "cpp", "cc"],
-      "rootPatterns": [".ccls-root", "compile_commands.json"],
+      "rootPatterns": [".ccls", "compile_commands.json",".pin-root"],
       "initializationOptions": {
         "cache": {
           "directory": ".ccls-cache"
